// Copyright 2020 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

syntax = "proto3";
package kwbase.kv.kvnemesis;
option go_package = "kvnemesis";

import "errorspb/errors.proto";
import "gogoproto/gogo.proto";
import "roachpb/api.proto";
import "roachpb/data.proto";
import "util/hlc/timestamp.proto";

message BatchOperation {
  repeated Operation ops = 1 [(gogoproto.nullable) = false];
  Result result = 2 [(gogoproto.nullable) = false];
}

enum ClosureTxnType {
  Commit = 0;
  Rollback = 1;
  // TODO(dan): Ambiguous = 2;
}

message ClosureTxnOperation {
  string txn_id = 1 [(gogoproto.customname) = 'TxnID'];
  repeated Operation ops = 2 [(gogoproto.nullable) = false];
  BatchOperation commit_in_batch = 3;
  ClosureTxnType type = 4;
  Result result = 5 [(gogoproto.nullable) = false];
  roachpb.Transaction txn = 6;
}

message GetOperation {
  bytes key = 1;
  Result result = 2 [(gogoproto.nullable) = false];
}

message PutOperation {
  bytes key = 1;
  bytes value = 2;
  Result result = 3 [(gogoproto.nullable) = false];
}

message SplitOperation {
  bytes key = 1;
  Result result = 2 [(gogoproto.nullable) = false];
}

message MergeOperation {
  bytes key = 1;
  Result result = 2 [(gogoproto.nullable) = false];
}

message ChangeReplicasOperation {
  bytes key = 1;
  repeated roachpb.ReplicationChange changes = 2 [(gogoproto.nullable) = false];
  Result result = 3 [(gogoproto.nullable) = false];
}

message Operation {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.onlyone) = true;

  BatchOperation batch = 1;

  // TODO(dan): The original prototype of kvnemesis had separate operations for
  // {Begin,Use,Commit,Rollback}Txn, which helped generate more interesting
  // concurrency traffic. This had some issues with deadlock in the txn wait
  // queue, but it seems like it should be possible to bring it back somehow.
  ClosureTxnOperation closure_txn = 2;

  GetOperation get = 7;
  PutOperation put = 8;
  SplitOperation split = 9;
  MergeOperation merge = 10;
  ChangeReplicasOperation change_replicas = 11;
}

enum ResultType {
  Unknown = 0;
  NoError = 1;
  Error = 2;
  Value = 3;
}

message Result {
  ResultType type = 1;
  errorspb.EncodedError err = 2;
  // Only set if Type is ResultType_Value. The RawBytes of a roachpb.Value.
  bytes value = 3;
}

message Step {
  option (gogoproto.goproto_stringer) = false;
  Operation op = 1 [(gogoproto.nullable) = false];
  util.hlc.Timestamp before = 2 [(gogoproto.nullable) = false];
  util.hlc.Timestamp after = 3 [(gogoproto.nullable) = false];
  int32 db_id = 4 [(gogoproto.customname) = 'DBID'];
  // Trace will contain the recording of the Step's execution. Used to print it
  // out when the test fails.
  string trace = 5;
}
